# EV_charging

./: .coverage  .dockerignore  .gitignore  AUDIT_COMPLETION_SUMMARY.md  COMPARISON_ANALYSIS.py  COMPLETE_FIX_SUMMARY.md  COMPLETION_REPORT.md  DASHBOARD_GUIDE.md  DELIVERABLES_INVENTORY.md  DEPLOYMENT.md  Dockerfile  EXECUTIVE_SUMMARY.md  FINAL_STATUS.md  JUDGES_README.md  OPENENV_AUDIT_COMPLETE.md  PHASE1_READINESS_REPORT.md  PHASE_1_COMPLETION_AND_PHASE_2_ROADMAP.md  PHASE_1_EXECUTIVE_SUMMARY.md  QUICKSTART.md  QUICK_FIX_403.md  README.md  RUN_TEST_FIX_REPORT.md  SUBMISSION_READY.md  TASK_GRADERS_SUMMARY.md  api_server.py  app.py  audit_complete.py  check_gh.py  final_validation.py  inference.py  loop_pytest.py  nginx.conf  openenv.yaml  packages.txt  phase1_docker_validation.py  pyproject.toml  quick_validation.py  requirements.txt  run_dashboard.sh  runs.json  (+6 more)
.github/workflows/: ci.yml  tests.yml
.streamlit/: config.toml
api/: __init__.py  server.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_OPENENV_AUDIT.md  DOCUMENTATION.md  FIXES_APPLIED.md  HF_SPACES_FIX.md  OPENENV_VALIDATION_AUDIT.md  PHASE_1_STRICT_COMPLIANCE.md  ROUND1_COMPLETION_REPORT.md  USAGE_GUIDE.md  VALIDATION_CHECKLIST.md
ev_charging_grid_env/: __init__.py  advanced_features.py  training_diagnostics.py
ev_charging_grid_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: start.sh
server/: app.py
tests/: conftest.py  test_api.py  test_dashboard.py  test_env.py  test_graders.py  test_inference.py  test_openenv_validation.py  test_regression_suite.py  test_stability_and_robustness.py  test_task_graders.py
ui/: __init__.py  components.py  dashboard.py
(+64 files in other folders)
