[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ev-charging-grid-env"
version = "0.1.0"
description = "OpenEnv-compliant multi-agent EV charging grid optimizer"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

