[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ev-charging-grid-env"
version = "1.0.0"
description = "Multi-agent EV charging grid optimization environment for RL research."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "gymnasium",
  "pettingzoo",
  "numpy",
  "pydantic>=2.0.0",
  "matplotlib",
  "pyyaml",
  "streamlit",
  "plotly",
  "pandas",
  "flask",
  "flask-cors",
  "openai>=1.30.0",
  "requests",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entry_point = "server.app:main"
server_module = "server.app"
server_function = "main"

[tool.setuptools.packages.find]
include = ["ev_charging_grid_env*", "server*"]
